# jaeger.logz.io

./: README.md  docker-compose.yml
common/: tracer.hpp
common/jaeger-client-cpp/cmake/: toolchain.cmake
service-a/: CMakeLists.txt  Dockerfile  config.yml  service.hpp
service-b/: CMakeLists.txt  Dockerfile  config.yml  service.hpp
